Fix production API
